# kamikaze

./: .gitmodules  README.md  arduino.py  haarcascades  main.py  open-mouth.annotations  open-mouth.vec  opencv-test.py  opencv_test.py  raspi_opencv_test.py  robot.py  test_cup_dispenser.py  test_turret.py  train.sh
arduino/: CMakeLists.txt  README.md  arduino-cmake  blink_module.h  kamikaze.cc  motor_module.h  uc_io_module.h
cc/: CMakeLists.txt  README.md  main.cc
